2003-09-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (add_file): Remove useless filling of $output, probably
	left a after CVS conflict.  This code is now in write_aclocal.

	* aclocal.in (configure_ac): Do not call require_configure_ac
	before parsing the options.
	* automake.in (configure_ac): Likewise.
	* lib/Automake/Variable.pm (configure_ac): Do not require configure.ac,
	find it.
	* lib/Automake/Configure_ac.pm (require_configure_ac):
	find_configure_ac never return an undefined value, so test
	the file's existence instead.
	* tests/Makefile.am (TESTS): Add help.test.
	* tests/help.test: New file.

2003-09-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/XFile.pm: Update to use ChannelDefs.
	(close): Call Automake::FileUtils::handle_exec_errors on errors.
	* automake.in (scan_autoconf_files): Exit with $?=63 on version
	mismatch.
	(scan_autoconf_traces): Likewise.  Close the autoconf pipe to
	capture abnormal exits.
	* aclocal.in ($exit_status): Remove, and use Channels.pm's $exit_code
	instead.
	(trace_used_macros): Close the autom4te pipe to capture abnormal exits.
	* lib/missing: When a tool has run and exited with $?=63, emulate
	it.  Adjust the diagnostic and pretend the tool is tool old in this
	case.  Use an emacs-updated "scriptversion" variable.
	* configure.in: Output tests/aclocal-${APIVERSION} and
	tests/automake-${APIVERSION}.
	* tests/aclocal.in, tests/automake.in,
	tests/missing.test, tests/missing2.test: New files.
	* tests/defs.in (AUTOMAKE, ACLOCAL, PATH): Define
	to use tests/aclocal-$APIVERSION and tests/automake-$APIVERSION.
	* tests/dup3.test: Remove. alocal9.test, acloca10.test, and others are
	already testing for this.
	* tests/depacl2.test, tests/dup2.test, tests/order.test: Fix
	configure.in so that aclocal works.
	* tests/defun.test: Quote the AC_DEFUN body.
	* tests/Makefile.am (TESTS): Add missing.test and missing2.test,
	and remove dup3.test.
	(check_SCRIPTS): Add aclocal and automake.
