@@ -1,5 +1,8 @@
 2003-09-07  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* tests/instsh.test: Do not reset $ACLOCAL and $AUTOMAKE now
+	that we have fake version in the $PATH.
+
 	* aclocal.in (add_file): Remove useless filling of $output, probably
 	left a after CVS conflict.  This code is now in write_aclocal.
 
